# defense-pm-tool

./: .dockerignore  .env.example  .env.production.template  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  codecov.yml  docker-compose.dev-isolated.yml  docker-compose.prod.yml  docker-compose.selfhosted.yml  docker-compose.yml  verify-environment.ps1
api/: .dockerignore  Dockerfile  Dockerfile.prod  alembic.ini  coverage.json  pyproject.toml  requirements-dev.txt  requirements.txt
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 001_initial_schema.py  002_evms_periods.py  003_ev_methods.py  004_baselines.py  005_scenarios.py  006_simulations.py  007_variance_and_audit.py  008_jira_integration.py  009_api_keys.py  010_resource_costs.py  011_placeholder.py  012_calendar_templates.py  013_resource_pools.py  014_resource_skills.py
api/defense_pm_tool_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/docs/: PERFORMANCE.md  SECURITY.md  WEEK11_VERIFICATION.md
api/requirements/: base.txt  dev.txt  test.txt
api/scripts/: __init__.py  migrate.py  run_benchmarks.py
api/src/: __init__.py  config.py  main.py
api/src/core/: __init__.py  auth.py  cache.py  constants.py  database.py  deps.py  encryption.py  exceptions.py  metrics.py  middleware.py  rate_limit.py  security.py  security_audit.py  validation.py
api/src/models/: __init__.py  activity.py  api_key.py  base.py  baseline.py  calendar_template.py  dependency.py  enums.py  evms_period.py  jira_integration.py  jira_mapping.py  jira_sync_log.py  management_reserve_log.py  program.py  report_audit.py  resource.py  resource_cost.py  resource_pool.py  scenario.py  simulation.py  skill.py  user.py  variance_explanation.py  wbs.py
api/src/repositories/: __init__.py  activity.py  base.py  baseline.py  dependency.py  evms_period.py  jira_integration.py  jira_mapping.py  jira_sync_log.py  management_reserve_log.py  program.py  report_audit.py  resource.py  scenario.py  simulation.py  skill.py  user.py  variance_explanation.py  wbs.py
api/src/schemas/: __init__.py  activity.py  api_key.py  base.py  baseline.py  calendar_import.py  calendar_template.py  common.py  cpr_format3.py  cpr_format5.py  dependency.py  errors.py  evms_period.py  histogram.py  jira_integration.py  leveling.py  management_reserve.py  overallocation.py  program.py  recommendation.py  report_audit.py  resource.py  resource_cost.py  resource_pool.py  scenario.py  simulation.py  skill.py  user.py  variance_explanation.py  wbs.py
api/src/services/: __init__.py  api_key_service.py  baseline_comparison.py  cache_service.py  calendar_import.py  calendar_import_service.py  correlation_model.py  cpm.py  cpr_format3_generator.py  cpr_format5_generator.py  cross_program_availability.py  dashboard_cache.py  ev_methods.py  evms.py  jira_activity_sync.py  jira_client.py  jira_variance_alert.py  jira_wbs_sync.py  jira_webhook_processor.py  material_tracking.py  monte_carlo.py  monte_carlo_cpm.py  monte_carlo_optimized.py  msproject_import.py  overallocation.py  parallel_leveling.py  report_generator.py  report_pdf_generator.py  resource.py  resource_cost.py  resource_histogram.py  resource_leveling.py  resource_loading.py  resource_recommendation.py  scenario_apply.py  scenario_promotion.py  scenario_simulation.py  scurve_enhanced.py  scurve_export.py  simulation_cache.py  (+2 more)
api/tests/: __init__.py  conftest.py
api/tests/benchmarks/: __init__.py  test_performance.py
api/tests/e2e/: __init__.py  test_month1_mvp.py  test_month2_evms.py  test_week10_jira_integration.py  test_week11_scenarios_security.py  test_week12_release.py  test_week13_infrastructure.py  test_week14_resources.py  test_week15_leveling.py  test_week17_cost_tracking.py  test_week18_calendar_import.py  test_week19_parallel_leveling.py  test_week20_resource_pools.py  test_week9_reports.py
api/tests/fixtures/: evms_reference_data.py  sample_project.xml
api/tests/integration/: test_activities_api.py  test_auth_api.py  test_auth_flow.py  test_baselines_api.py  test_dependencies_api.py  test_dependency_api.py  test_ev_methods_api.py  test_evms_api.py  test_health_endpoints.py  test_histogram_api.py  test_import_export_api.py  test_jira_integration_api.py  test_jira_webhook_api.py  test_leveling_api.py  test_management_reserve_api.py  test_overallocations_api.py  test_parallel_leveling_api.py  test_programs_api.py  test_recommendation_endpoints.py  test_reports_api.py  test_resource_cost_api.py  test_resource_leveling.py  test_resource_loading.py  test_resource_pools_api.py  test_resource_repository.py  test_resources_api.py  test_scenarios_api.py  test_schedule_api.py  test_simulations_api.py  test_skills_api.py  test_variance_api.py  test_wbs_api.py  test_week1_flow.py  test_week2_e2e.py  test_week3_e2e.py  test_week7_e2e.py
api/tests/load/: README.md  __init__.py  locustfile.py  run_load_test.py
api/tests/performance/: test_benchmarks.py  test_dashboard_benchmarks.py  test_monte_carlo_benchmarks.py
api/tests/security/: __init__.py  test_owasp_audit.py
api/tests/unit/: test_activities_endpoints.py  test_activity_crud.py  test_activity_model.py  test_activity_sync_service.py  test_api_endpoints_coverage.py  test_api_key_service.py  test_api_keys_endpoints.py  test_auth.py  test_base_model.py  test_base_model_and_schemas.py  test_base_model_extended.py  test_base_repository.py  test_baseline.py  test_baseline_comparison.py  test_baseline_comparison_extended.py  test_baseline_comparison_service.py  test_baseline_repository.py  test_baselines_endpoints.py  test_cache.py  test_cache_service.py  test_calendar_import.py  test_calendar_import_endpoints.py  test_calendar_import_service.py  test_calendar_template.py  test_calendar_template_schemas.py  test_config.py  test_constants.py  test_core_auth.py  test_correlation_model.py  test_cors.py  test_cpm.py  test_cpm_additional.py  test_cpm_extended.py  test_cpr_format3.py  test_cpr_format3_generator.py  test_cpr_format5.py  test_cpr_format5_complete.py  test_cpr_format5_generator.py  test_cross_program_availability.py  test_csv_export.py  (+101 more)
(+370 files in other folders)
