[project]
name = "defense-pm-tool-api"
version = "1.0.0"
description = "Defense Program Management Tool API with EVMS/DFARS Compliance"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.11"
authors = [
    { name = "Defense PM Tool Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "networkx>=3.2.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.19.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires database)",
    "slow: Tests that take > 1 second",
    "cpm: CPM engine tests",
    "evms: EVMS calculation tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLW0603", # global statement (needed for module-level singletons in database.py)
    "RUF022",  # __all__ not sorted (we use logical grouping)
    "ERA001",  # commented code (allow explanatory comments in CPM formulas)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004", "RUF001", "PLC0415", "PLR0915", "F841", "B017", "C416", "SIM105", "PTH108"]
"alembic/*" = ["ERA001"]
"src/api/v1/endpoints/*" = ["ARG001", "PLC0415", "TC001", "TC003"]  # current_user for auth, in-func imports, runtime Depends types
"src/models/base.py" = ["ARG001"]  # event listener requires signature
"src/models/wbs.py" = ["ARG002"]  # TypeDecorator methods require signature
"src/core/deps.py" = ["B904", "PLC0415"]  # HTTPException re-raise pattern, lazy import to avoid circular deps
"src/core/middleware.py" = ["TC002", "TC003"]  # Request/Response, Callable/Awaitable needed at runtime for middleware dispatch signatures
"src/core/metrics.py" = ["TC003"]  # Callable/Generator needed at runtime for decorator signatures
"src/config.py" = ["ERA001"]  # section comments
"src/schemas/program.py" = ["SIM102"]  # nested ifs more readable for date validation
"src/services/baseline_comparison.py" = ["SIM102", "SIM103"]  # nested ifs for clarity

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "bcrypt.*",
]
ignore_missing_imports = true
